avoid overflow

--- a/frontend/src/components/BigPostMobile/BigPostMobile.scss
+++ b/frontend/src/components/BigPostMobile/BigPostMobile.scss
@@ -57,9 +57,9 @@
 
         .date {
             width: 100%;
-            margin: 0 10px;
             padding: 8px 0 10px 16px;
-            display: flex;            
+            display: flex;    
+            text-align: left;        
         }
 
         .comment {
